--- a/blog/templates/blog/category_list.html
+++ b/blog/templates/blog/category_list.html
@@ -38,10 +38,10 @@
 	    					{% for post in object_list %}
 	    					<div class="col-md-12">
 	    						<div class="blog-entry ftco-animate">
-	    							<a href="#" class="img" style="background-image: url(' {{post.thumbnail.url}}');"></a>
+	    							<a href="{% url 'blog:detail' post.slug %}" class="img" style="background-image: url(' {{post.thumbnail.url}}');"></a>
 	    							<div class="text pt-2 mt-3">
 					          	<span class="category mb-1 d-block"><a href="#">{{post.category_published}}</a></span>
-				              <h3 class="mb-4"><a href="#">{{post.title}}</a></h3>
+				              <h3 class="mb-4"><a href="{% url 'blog:detail' post.slug %}">{{post.title}}</a></h3>
 				              <p class="mb-4">{{post.description|truncatewords:30}}</p>
 				              <div class="author mb-4 d-flex align-items-center">
 				            		<a href="#" class="img" style="background-image: url(' {% static "blog/images/person_1.jpg" %} ');"></a>
@@ -59,7 +59,7 @@
 					              	</p>
 				              	</div>
 				              	<div class="half">
-					              	<p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">ادامه مطلب...</a></p>
+					              	<p><a href="{% url 'blog:detail' post.slug %}" class="btn btn-primary p-3 px-xl-4 py-xl-3">ادامه مطلب...</a></p>
 				              	</div>
 				              </div>
 				            </div>
